[package]
name = "kalshi_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23" }
reqwest = { version = "0.11.13", features = ["rustls", "json"] }
serde = { version = "1.0.152", features = ["derive"] }

# TODO: Do we really need to "full" version here?
tokio = { version = "1.23.1", features = ["full"] }